# leptos-mx-workshop

./: .gitignore  LICENSE  README.md
cargo-make/: cargo_plugins.toml  main.toml  rust_toolchain.toml  trunk_server.toml
examples/client-side-rendering/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
examples/client-side-rendering/src/: lib.rs  main.rs
examples/client-side-rendering/src/components/: header.rs  mod.rs  product_card.rs  products_grid.rs  shopping_cart.rs  shopping_cart_item.rs
examples/client-side-rendering/src/domain/: mod.rs  product.rs  rating.rs
examples/client-side-rendering/src/pages/: error_404.rs  home.rs  mod.rs  products.rs
examples/client-side-rendering/src/pages/products/: products_list.rs  single_product.rs
examples/client-side-rendering/style/: input.css
