[package]
name = "client-side-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
icondata = "0.3.1"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos-use = { version = "0.10.10", features = ["serde"] }
leptos_icons = "0.3.1"
leptos_meta = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.12", features = ["csr", "nightly"] }
log = "0.4.22"
mime = "0.3.17"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "File",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "UrlSearchParams",
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
